# TenmeiProj

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  start_game.sh  stop_game.sh
core_app/: models.py  regions.py  serializers.py  services.py  urls.py  views.py
core_app/migrations/: 0001_initial.py  0002_rename_ismale_maincharacter_is_male_and_more.py  0003_alter_gamesession_character_and_more.py  0004_gamesession_hazard_level_gamesession_story_log_and_more.py  0005_remove_gamesession_hazard_level_and_more.py  0006_gamesession_current_region.py  0007_gamesession_daily_actions_buffer.py  0008_gamesession_met_fox_gamesession_monk_encounters_and_more.py  0009_gamesession_has_monastery_key.py  0010_maincharacter_cause_of_death_maincharacter_is_dead.py  0011_gamesession_has_comb.py
frontend/: .gitignore  index.html  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/api/: authApi.js
frontend/src/components/: Form.jsx  Navbar.jsx  Typewriter.jsx
frontend/src/pages/: CharacterCreate.jsx  CharacterSelect.jsx  GameDashboard.jsx  LandingPage.jsx  Login.jsx  Logout.jsx  Signup.jsx
frontend/src/styles/: CharacterSelect.css  Form.css  GameDashboard.css  LandingPage.css  Login.css
kyoto_proj/: .env.example  Dockerfile  asgi.py  main.py  settings.py  tests.py  urls.py  wsgi.py
narration_service/: Dockerfile  main.py
webserver/: Dockerfile  default.conf
