[project]
name = "tenmeiproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.41",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "fastapi",
    "uvicorn",
    "ollama",
    "python-dotenv",
    "requests"
]
